# helix-lang

./: .clang-format  .clang-tidy  .clangd  .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README  README.md  SECURITY.md  TODO.md  _H1HJA9ZLO_17.helix-compiler.cc  a.py  all_langs_keywords.txt  build.ninja  build.py  build.rs  build_rev.txt  c_interop.py  compile.bat  compile.py  compile_commands.json  config.toml  copy_helix.toml  globals.py  helix.bat  helix.code-workspace  helix.py  helix.sh  helix.toml  index.html  init  linux_note.md  main  makefile  math.tex  nuitka-crash-report.xml  (+25 more)
.github/: CONTRIBUTING.md  README.md
.github/ci/: aarch64-macos-release.sh  aarch64-windows.ps1  install_xmake.ps1  x86_64-linux-debug.sh  x86_64-linux-release.sh  x86_64-macos-release.sh  x86_64-windows-debug.ps1  x86_64-windows-release.ps1
.github/workflows/: ci.yml  codeql.yml
.helix/cache/: find_keyword.cache
.helix/include/: __c_cpp_import__.py  __c_interop.py  core.py  core2.py
.trunk/: trunk.yaml
PORT/: Cargo.toml  begin_end.md  build.rs  cold_start.bat  guildline.md  todo.md
PORT/src/: copy.hlx  main.rs  test.hlx
PORT/src/cpp/: greeting.cpp  mod.rs
PORT/src/cpp/include/: file_reader.hpp  file_stream.hpp  greeting.h
PORT/src/cpp/src/: file_io.cpp  file_reader.cpp  file_stream.cpp  greeting.cpp
PORT/src/python/: mod.rs  test.py
PORT/src/python/macros/: panic.rs
PORT/src/python/private/: python_import.rs
PORT/src/python/shared/: default_params.rs  mod.rs  unknown_int.rs
PORT/src/python/src/: panic.py  test21.py
PORT/src/rust/: config.rs  debug_counter.rs  mod.rs  panic_hook.rs  token.rs
PORT/src/rust/lib/token/: mod.rs
PORT/src/rust/shared/: file_data.rs  mod.rs
PORT/src/rust/token/: keywords.rs  lexer.rs  macro_prototype.txt  mod.rs  token.rs  token_list.rs  token_value.rs  tokenize_line.rs
PORT/src/tests/tokenizer/: large_test.rs  small_test.rs
PORT/stdlib/: int.hlx  primitive.hlx
arc/: build.py  exmaple_err.py
arc/utils/: count_lines.py
ark/utils/: rr_view.sh
assets/code/: async-example.hlx  control-flow-exmaple.hlx  ffi-example.hlx  function-example.hlx  showcase.hlx  type-bounds-example.hlx  variable-exmaple.hlx
cache/: find_keyword.cache  normalize_tokens.cache  shared.data
classes/: Scope.py  Token.py  Transpiler.py  WorkerPool.py
core/: better_print.py  cache_store.py  compile_bar.py  config.py  panic.py
core/token/: normalize_tokens.py  remove_comments.py  saftey_checks.py  tokenize_file.py  tokenize_line.py
docs/: doc.py
docs/01/: E20.md
docs/poject/: begin_end.md
functions/: _async_pre.py  _class.py  _for.py  _functions.py  _include.py  _let.py  _match.py  _process.py  _unless.py  _unmarked.py
helix/: README  hi.hh  main.cc
helix-extension/: package.json
helix-extension/syntaxes/: helix.tmLanguage.json
helix-highlighter/: README.md  helix-language-0.0.1.vsix  language-configuration.json  package.json  vsc-extension-quickstart.md
helix-highlighter/syntaxes/: helix.tmLanguage.json
helix-proc/: Cargo.toml
helix-proc/src/: _lib.rs  lib.rs  macro_prototype.txt
helix-synatax-highlighter/: CHANGELOG.md  README.md  helix-language-0.0.1.vsix
helix/.helix/: helix.toml
helix/mods/: dyn_type.hlx
helix/pkgs/: cxxabi_config.hlx
helix/stdlib/: ops.hlx  primitive.hlx
helix/syntax/: test_case1.hlx
include/: __c_cpp_import__.py  __c_interop.py  _types.py  c_cpp.py  core.py  object.py
language/: .hlx  all_keyword_usage.hlx  helix.ebnf  keywords.md  lang_features.md  std_algs.md
language/examples/: test.cpp  test.hlx
language/expect/: c++abi.h  codegen.cpp  test.hlx
language/helix/: README
language/lib/: dyn_type.hlx  lib.hlx
language/syntax/: async.md  conditionals.md  data-structures.md  error-handling.md  functions.md  loops.md  macros.md  operators.md  readme.md  type-handling.md
lib/: __c_abstraction.py  __c_interop.py  c_cpp.py
source/: README  helix.cc  helix.hlx  main.cc
source/include/: colors_ansi.hh  inttypes.hh  printV2
source/parser/: error_codes.def
source/token/: token.hh
source/toolchain/: parser.hh  readme.md
src/: better_print.py  cache_store.py  cli.cc  compile_bar.py  config.py  copy.hlx  global_vars.py  globals.py  headder.py  main.cc  main.rs  panic.py
src/cache/: normalize_tokens.cache  remove_comment.cache  tokenize_line.cache
src/classes/: ArgParser.py  Hashing.py  HelixLanguage.py  (+12 more)
start.build/: __constants.c  __constants.const  __constants.h  __constants.txt  __helpers.c  __helpers.h  __loader.c  build_definitions.h  clcache-stats.112984.txt  module.__main__.c  module.__main__.const  module.__parents_main__.c  module.__parents_main__.const  module.classes.Scope.c  module.classes.Scope.const  module.classes.Token.c  module.classes.Token.const  module.classes.Transpiler.c  module.classes.Transpiler.const  module.classes.WorkerPool.c  module.classes.WorkerPool.const  module.classes.c  module.classes.const  module.core.better_print.c  module.core.better_print.const  module.core.c  module.core.cache_store.c  module.core.cache_store.const  module.core.compile_bar.c  module.core.compile_bar.const  module.core.config.c  module.core.config.const  module.core.const  module.core.panic.c  module.core.panic.const  module.core.token.c  module.core.token.const  module.core.token.normalize_tokens.c  module.core.token.normalize_tokens.const  module.core.token.remove_comments.c  (+150 more)
syntax/: async.md  cappy.hlx  data-structures.md  generators.md  head_syntax.hdlx  head_syntax.hhx  helix-bnf.txt  imports.md  pattern-matching.md  pre-processor.md  syntax.hlx  syntax.md  test.hlx  test_case1.hlx  type-handling.md  variable-declaration.md
temp/: CMakeLists.txt  build_rev.txt  datatype_test.py  test.py
test_simd/: Cargo.toml
tests/: ThreadPool_test.py  ThreadPoolsd_sda.py  ast_test.json  compiler  entry.hlx  expr_tests.hlx  js.json  macro_test.hlx  main.hlx  range.hlx  some_import.hlx  start.cpp  state_tests.hlx  test.cc  test.py  test2.py  test_tokenize.hlx  test_tokens.cc  toolchain_test.hlx
types/: Type.cc
utils/: rr_view.sh
(+491 files in other folders)
