[package]
name = "helix-compiler"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "port"
path = "src/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autocxx = "0.26.0"
backtrace = "0.3.70"
fxhash = "0.2.1"
lazy_static = "1.4.0"
pyo3 = "0.20.3"
regex = "1.10.3"
syn = "2.0.53"
cxx = "1.0"
miette = "7.1.0"
toml = "0.8.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.114"
log = "0.4.21"
pretty_env_logger = "0.5.0"
serde_repr = "0.1.18"
smallvec = "1.13.2"
# helix-macros = { path = "./macros" }

[build-dependencies]
cxx-build = "1.0.120"
autocxx-build = "0.26.0"
miette = { version = "7.1.0", features = ["fancy"] }
